Arquivos Vue.js

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Emprega Viçosa"
 APP_ENV=local
 APP_KEY=base64:oZi+HmA4U4qQeCJ5lGLnfqrmRALCPUKui+yNaWnXavk=
 APP_DEBUG=true
