--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "@devindex/vue-mask": "^2.0.3",
         "@vuelidate/core": "^2.0.0",
-        "@vuelidate/validators": "^2.0.0"
+        "@vuelidate/validators": "^2.0.0",
+        "sweetalert2": "^11.6.14"
     }
 }
